--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
 </head>
 <body>
     <div class="content">
-        <p style="font-size: 15vw;">Joan Code</p>
+        <p style="font-size: 15vw; font-weight: bold;">Joan Code</p>
         <div class="buttons">
             <a href="https://github.com" target="_blank" class="btn btn-outline-danger">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-github" viewBox="0 0 16 16">
